Search bar in all pages

--- a/pages/household/household.wxml
+++ b/pages/household/household.wxml
@@ -1,2 +1,3 @@
 <!--pages/household/household.wxml-->
+<search-form></search-form>
 <image style="width: 100%;"mode="widthFix" src="../../images/household.jpg"></image>
