--- a/pages/hazardous/hazardous.wxml
+++ b/pages/hazardous/hazardous.wxml
@@ -1,2 +1,3 @@
 <!--pages/hazardous/hazardous.wxml-->
+<search-form></search-form>
 <image style="width: 100%;"mode="widthFix" src="../../images/hazardous.jpg"></image>
