--- a/pages/residual/residual.wxml
+++ b/pages/residual/residual.wxml
@@ -1,3 +1,4 @@
 <!--pages/residual/residual.wxml-->
 <search-form></search-form>
+<ad unit-id="adunit-e95a91c70773c3fd"></ad>
 <image style="width: 100%;"mode="widthFix" src="../../images/residual.jpg"></image>
