--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -1,4 +1,3 @@
 <!--pages/household/household.wxml-->
 <search-form></search-form>
-<ad unit-id="adunit-12defb3741dc5812"></ad>
-<image style="width: 100%;"mode="widthFix" src="../../images/household.jpg"></image>
+<view>设置页面</view>
