--- a/pages/voice/voice.wxml
+++ b/pages/voice/voice.wxml
@@ -1,3 +1,3 @@
 <!--pages/hazardous/hazardous.wxml-->
 <search-form></search-form>
-<image style="width: 100%;"mode="widthFix" src="../../images/hazardous.jpg"></image>
+<view>开发中，敬请期待</view>
