--- a/pages/photo/photo.wxml
+++ b/pages/photo/photo.wxml
@@ -1,6 +1,7 @@
 <!--pages/recoverable/recoverable.wxml-->
 <search-form></search-form>
-<camera device-position="back" flash="off" binderror="error" style="width: 100%; height: 300px;"></camera>
-<button type="primary" bindtap="takePhoto">养猪吧！</button>
-<view class='result'>笔记本：可回收垃圾</view>
-<image mode="widthFix" src="{{src}}"></image>
+<image wx:if="{{src}}" mode="widthFix" src="{{src}}"></image>
+<camera wx:else device-position="back" flash="off" binderror="error" style="width: 100%; height: 300px;"></camera>
+<button wx:if="{{src}}" type="primary" bindtap="continuePhoto">继续拍照</button>
+<button wx:else type="primary" bindtap="takePhoto">拍照识别</button>
+<view wx:if="{{src}}" class='result'>笔记本：可回收垃圾</view>
