--- a/pages/photo/photo.wxml
+++ b/pages/photo/photo.wxml
@@ -8,6 +8,22 @@
 <button wx:if="{{src}}" type="primary" bindtap="continuePhoto">继续拍照</button>
 <button wx:else type="primary" bindtap="takePhoto">拍照识别</button>
 <!-- <view wx:if="{{src}}" class='result'>笔记本：可回收垃圾</view> -->
-<view wx:for="{{items}}">
+<!-- <view wx:for="{{items}}">
   [{{index}}] {{item.object}}: {{item.classification}}
-</view>
+</view> -->
+
+<!-- <view> -->
+<scroll-view scroll-y="true" style="height: 100px;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+    <view wx:for="{{items}}">
+    [{{index+1}}] {{item.object}}: {{item.classification}}
+    </view>
+    <!-- <view id="green" class="scroll-view-item bc_green"></view>
+    <view id="red"  class="scroll-view-item bc_red"></view>
+    <view id="yellow" class="scroll-view-item bc_yellow"></view>
+    <view id="blue" class="scroll-view-item bc_blue"></view> -->
+  </scroll-view>
+  <!-- <view class="btn-area">
+    <button size="mini" bindtap="tap">click me to scroll into view </button>
+    <button size="mini" bindtap="tapMove">click me to scroll</button>
+  </view> -->
+<!-- </view> -->
